--- a/KCBcapstone_project.ipynb
+++ b/KCBcapstone_project.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/glorious44/capstone_project/blob/main/KCBcapstone_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# Predictive Analytics of Healthcare Data using Machine Learning Approaches.\n",
         "\n",
@@ -17,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "jKYpDxpG9wZ4"
       },
@@ -43,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "Zl-jKHnWEsmo",
         "colab": {
@@ -68,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "jlzuwiVqFd8B",
         "colab": {
@@ -1020,7 +1030,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "d650fa1a",
         "colab": {
@@ -1043,7 +1053,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "V0V38AB7Gkwx",
         "colab": {
@@ -1073,7 +1083,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "cbM7yHRzHs0g",
         "colab": {
@@ -1112,7 +1122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "IRkqw4gMI5u5",
         "colab": {
@@ -1647,7 +1657,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "Nso0vHt3Jmg5",
         "colab": {
@@ -1677,7 +1687,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "qs2-6IHrKl2J"
       },
@@ -1690,7 +1700,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "Vil5FI2ZK9yA",
         "colab": {
@@ -1718,7 +1728,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "88a340c8",
         "colab": {
@@ -1747,7 +1757,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "3a194622"
       },
@@ -1760,7 +1770,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "AroZQ1K8MOse"
       },
@@ -1776,7 +1786,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "DXQ7T2HWN6-2"
       },
@@ -1788,7 +1798,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1841,7 +1851,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "aae0bb92",
         "colab": {
@@ -2150,7 +2160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "QP8b0ap_-_9b",
         "colab": {
@@ -2194,7 +2204,7 @@
         "x_train_sel=X_train[selected_features]\n",
         "x_test_sel=X_test[selected_features]"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2207,7 +2217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "d-mroNLJHP2-",
         "colab": {
@@ -2260,7 +2270,7 @@
         "id": "yFZVsYkfbXwq",
         "outputId": "19f46db3-c525-4eb5-c1bb-eb149cd906c8"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2720,7 +2730,7 @@
         "id": "xPnk1zLWc1EQ",
         "outputId": "c5c56a82-4592-4c09-9c9a-d95694796b9e"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2769,7 +2779,7 @@
         "outputId": "dfff2d00-31b3-4698-9256-ba3e85d10279",
         "id": "2AQQq18PwE8J"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2801,7 +2811,7 @@
       "metadata": {
         "id": "LJ1_T_DCfO4m"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2819,7 +2829,7 @@
         "id": "9BqzSfpWlxBv",
         "outputId": "30ce5e3a-beca-4b4e-e232-c87a2f6f5891"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2833,7 +2843,9 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNjlMzoA3z4z+2xGOYPdqeX",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
